# ssh-key-transmitter

./: .gitignore  README.md  pyproject.toml  requirements.txt  ssh-key-transmit.py
src/: banner.py  constants.py  enums.py  exceptions.py  log.py  requirements.txt  version.py
src/cli/: callbacks.py  main.py
src/core/: manager.py  socks_manager.py  transmitter.py
